# graphics_lib

./: CMakeLists.txt
include/: Point.h  draw_graphics.h
src/: Point.cpp  draw_graphics.cpp
test/: testGraphicsLibrary.cpp
